# advent-of-code

./: .gitignore  README.md  test.json
2015/1/: README.md  soln.hs
2015/2/: soln.hs
2015/3/: README.md  soln.hs
2015/4/: README.md  soln.hs  soln.py
2015/5/: README.md  soln.hs
2015/6/: README.md  soln.hs  soln.py
2015/7/: soln.hs
2022/input/: ten.txt
elixir/y2024/: d01.exs
haskell/: .cabal-fmt-11268-Wx44mWyd58kh  .ghci  .gitignore  README.md  aoc-hs.cabal  haskell.cabal  haskell.cabal.save0
haskell/Y15/: d01.hs  d02.hs  d03.hs  d04.hs
haskell/Y21/: d01.hs
haskell/Y25/: d01.hs  d02.hs  d03.hs  d04.hs
haskell/app/: Main.hs  Util.hs
haskell/app/Y2022/: D01.hs  D02.hs  Soln.hs
haskell/app/Y2023/: D01.hs  D02.hs  Soln.hs
haskell/src/: Main.hs  Util.hs
haskell/src/Y23/: D01.hs
haskell/src/Y24/: d01.hs  d02.hs
haskell/src/Y25/: d03.hs
input/y2024/: d03_test.txt
js/: README.md  index.js  package-lock.json  package.json  util.js  util.test.js
js/util/: md5.js
js/y2015/: d01.js  d02.js  d03.js  d04.js  d05.js  d06.js  d07.js
js/y2016/: d01.js  d02.js
js/y2020/: d01.js  d04.js  d05.js  d06.js  d07.js
js/y2023/: d01.js  d02.js  d03.js  d04.js  d05.js  d06.js  d07.js  d08.js  d09.js  d10.js  d11.js  d12.js  d13.js  d14.js  d15.js  d16.js  d17.js  d18.js  d19.js  d20.js  d21.js  d22.js  d23.js  d24.js  d25.js
js/y2024/: d01.js  d02.js  d03.js  d04.js  d05.js  d06.js  d07.js  d08.js  d09.js  d10.js  d11.js  d12.js  d13.js  d14.js  d15.js  d16.js  d17.js  d18.js  d19.js  d20.js  d21.js  d22.js  d23.js  d24.js  d25.js
js/y2025/: d02.js  d03.js
rust/: README.md
rust/src/: main.rs  util.rs
(+76 files in other folders)
