cabal-version:      3.6
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             j-alder

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell
    main-is:            Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      Util, Y2023.Soln, Y2023.D01

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      regex-tdfa, base ^>=4.17.2.0
    hs-source-dirs:     app
    default-language:   Haskell2010
